// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Divider > props > :align[left/right/center] > align-vertical-left 1`] = `
<div
  class="t-divider t-divider--vertical t-divider--with-text t-divider--with-text-left"
>
  <span
    class="t-divider__inner-text"
  >
    
    text
    
  </span>
</div>
`;

exports[`Divider > props > :align[left/right/center] 1`] = `
<div
  class="t-divider t-divider--horizontal t-divider--with-text t-divider--with-text-left"
>
  <span
    class="t-divider__inner-text"
  >
    
    Text
    
  </span>
</div>
`;

exports[`Divider > props > :align[left/right/center] 2`] = `
<div
  class="t-divider t-divider--horizontal t-divider--with-text t-divider--with-text-right"
>
  <span
    class="t-divider__inner-text"
  >
    
    Text
    
  </span>
</div>
`;

exports[`Divider > props > :align[left/right/center] 3`] = `
<div
  class="t-divider t-divider--horizontal t-divider--with-text t-divider--with-text-center"
>
  <span
    class="t-divider__inner-text"
  >
    
    Text
    
  </span>
</div>
`;

exports[`Divider > props > :content[string/function] > content-TNode 1`] = `
<div
  class="t-divider t-divider--horizontal t-divider--with-text t-divider--with-text-center"
>
  <span
    class="t-divider__inner-text"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </span>
</div>
`;

exports[`Divider > props > :content[string/function] > content-string 1`] = `
<div
  class="t-divider t-divider--horizontal t-divider--with-text t-divider--with-text-center"
>
  <span
    class="t-divider__inner-text"
  >
    TDesign
  </span>
</div>
`;

exports[`Divider > props > :dashed[true/false] > dashed-false-default 1`] = `
<div
  class="t-divider t-divider--horizontal"
>
  <!---->
</div>
`;

exports[`Divider > props > :dashed[true/false] > dashed-false-explicit 1`] = `
<div
  class="t-divider t-divider--horizontal"
>
  <!---->
</div>
`;

exports[`Divider > props > :dashed[true/false] > dashed-true 1`] = `
<div
  class="t-divider t-divider--horizontal t-divider--dashed"
>
  <!---->
</div>
`;

exports[`Divider > props > :dashed[true/false] > dashed-vertical-true 1`] = `
<div
  class="t-divider t-divider--vertical t-divider--dashed"
>
  <!---->
</div>
`;

exports[`Divider > props > :default[string/function] > default-string 1`] = `
<div
  class="t-divider t-divider--horizontal t-divider--with-text t-divider--with-text-center"
>
  <span
    class="t-divider__inner-text"
  >
    TDesign
  </span>
</div>
`;

exports[`Divider > props > :default[string/function] 1`] = `
<div
  class="t-divider t-divider--horizontal t-divider--with-text t-divider--with-text-center"
>
  <span
    class="t-divider__inner-text"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </span>
</div>
`;

exports[`Divider > props > :layout[horizontal/vertical] 1`] = `
<div
  class="t-divider t-divider--horizontal"
>
  <!---->
</div>
`;

exports[`Divider > props > :layout[horizontal/vertical] 2`] = `
<div
  class="t-divider t-divider--vertical"
>
  <!---->
</div>
`;

exports[`Divider > props > default should be priority to content > default-priority 1`] = `
<div
  class="t-divider t-divider--horizontal t-divider--with-text t-divider--with-text-center"
>
  <span
    class="t-divider__inner-text"
  >
    
    TDesign
    
  </span>
</div>
`;
